# vslam_experiment

./: README.md  project_big_vram_blocked.md  project_spark_adaptation.md
ORB_SLAM3_ROS2/: CMakeLists.txt  package.xml
ORB_SLAM3_ROS2/CMakeModules/: FindORB_SLAM3.cmake
ORB_SLAM3_ROS2/config/monocular-inertial/: GeoScan_D435i.yaml  GeoScan_fisheye.yaml
ORB_SLAM3_ROS2/config/stereo/: GeoScan_fisheye.yaml
ORB_SLAM3_ROS2/config/stereo-inertial/: GeoScan_fisheye.yaml  shmk_stereo_4k.yaml
ORB_SLAM3_ROS2/launch/: mono-inertial.launch.py  mono.launch.py  stereo-inertial.launch.py
ORB_SLAM3_ROS2/rviz/: mono_inertial.rviz  stereo_inertial.rviz
ORB_SLAM3_ROS2/src/monocular/: monocular-slam-node.cpp
ORB_SLAM3_ROS2/src/monocular-inertial/: monocular-inertial-node.cpp  monocular-inertial-node.hpp  monocular-inertial.cpp
ORB_SLAM3_ROS2/src/rgbd/: rgbd-slam-node.cpp
ORB_SLAM3_ROS2/src/stereo/: stereo-slam-node.cpp
ORB_SLAM3_ROS2/src/stereo-inertial/: stereo-inertial-node.cpp  stereo-inertial-node.hpp  stereo-inertial.cpp
cuvslam_ros/: CMakeLists.txt  README.md  package.xml
cuvslam_ros/config/: euroc_stereo.yaml  geoscan.yaml  geoscan_mono.yaml  geoscan_rgbd.yaml  geoscan_stereo.yaml
cuvslam_ros/include/cuvslam_ros/: cuvslam_ros.hpp
cuvslam_ros/launch/: cuvslam.launch.py  euroc_stereo_inertial.launch.py  geoscan_mono.launch.py  geoscan_rgbd.launch.py  geoscan_stereo.launch.py
cuvslam_ros/rviz/: cuvslam.rviz
cuvslam_ros/src/: cuvslam_rosnode.cpp
cuvslam_ros/src/cuvslam_ros/: cuvslam_ros.cpp
docs/: 00-index.md  01-vio-vi-slam.md  02-deep-vo.md  03-mapping-dense.md  04-gaussian-slam.md  05-feedforward-recon.md  06-benchmarks.md  PLAN-benchmark-machine-setup.md
droid_w_ros2/: SUMMARY.md  package.xml  setup.cfg  setup.py
droid_w_ros2/config/: droid_w_ros.yaml
droid_w_ros2/droid_w_ros2/: droid_w_node.py  frame_buffer.py
droid_w_ros2/launch/: droid_w.launch.py
scripts/: extract_all_frames.py
scripts/gsplat/: align_airslam_to_finder.py  eval_3dgs_ply.py  prepare_3dgs_data.py  train_3dgs.py  train_3dgs_densify.py
scripts/mapanything/: run_mapanything_geoscan.py
