<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>droid_w_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for DROID-W (DROID-SLAM in the Wild). Subscribes a
    monocular image topic, buffers frames, runs the DROID-W batch SLAM, and
    republishes the estimated trajectory as nav_msgs/Odometry + tf and the
    sparse keyframe cloud as sensor_msgs/PointCloud2. A TUM-format trajectory
    file is saved on shutdown.</description>
  <maintainer email="guoruonan@ztpilot.com">steve</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
